--- a/css/darre.css
+++ b/css/darre.css
@@ -333,24 +333,29 @@
 }
 
 /*点赞页面 从下往上*/
+.bg{
+  position:absolute;
+  top:0;left:0;
+  width:100%;
+  z-index:0;
+}
 #praiseContainer{
+  background:#000;
   width:100%;
   height:100%;
   position: absolute;
   left:0;
   top:0;
-  background: url("../img/darre/praise_bg.jpg") no-repeat;
-  background-size: 100% 100%;
   line-height:0;
 }
 #praiseContainer .btn{
-  width:6.21rem;
-  height:1.15rem;
-  position: absolute;
-  left:50%;
+  width: 6.21rem;
+  height: 1.15rem;
+  left: 50%;
   margin-left: -3.10rem;
-  bottom: 0.28rem;
+  top: 84%;
   position: absolute;
+  z-index: 2;
 }
 #praiseContainer .btn img{
   width:100%;
@@ -432,4 +437,13 @@
   font-weight:bold;
   color: #eccb88;
   padding-top: 0.18rem;
+}
+.go_rank{
+  width: 6.21rem;
+  height: 1.15rem;
+  background: url(../img/rank_btn.png) center no-repeat;
+  background-size: 100%;
+  position: absolute;
+  top: 74%;
+  left: 9%;
 }
