--- a/css/base.css
+++ b/css/base.css
@@ -33,14 +33,17 @@ html, body {
   background:url(../img/loading.gif) center no-repeat;
   background-size:100%;
 }
-.loading span{
-  display:none;
-  width:1.57rem;height:1.57rem;
-  position:absolute;
-  top:29%;
-  left:41%;
-  background:url(../img/play.png);
-  background-size:100%;
+.load span{
+  display: none;
+  width: 100%;
+  position: absolute;
+  top: 36%;
+  /*text-decoration: underline;*/
+  color: #eee;
+  font-size: 0.36rem;
+  text-align: center;
+  color:#eee;
+
 }
 .content, .part {
   width: 100%;
@@ -357,7 +360,7 @@ html, body {
 .item2 .note {
   top: 0.4rem;
   left: 0.75rem;
-  background-image: url(../img/p2_note_02.png);
+  background-image: url(../img/p2_note_01.png);
 }
 
 .item3 .tit {
@@ -378,7 +381,7 @@ html, body {
 .item3 .note {
   top: 0.1rem;
   right: 2.65rem;
-  background-image: url(../img/p2_note_03.png);
+  background-image: url(../img/p2_note_01.png);
   transform: rotate(15deg);
 }
 
@@ -565,6 +568,16 @@ canvas{
   font-size:0.2rem;color:#fff;
   width:5.16rem; height:.96rem;
 }
+.clip_hint{
+  color: #fff;
+  text-align: center;
+  width: 100%;
+  text-decoration: underline;
+  position: absolute;
+  z-index: 2;
+  font-size: 0.3rem;
+  bottom: 0.7rem;
+}
 .poster .title{
   position:absolute;
   top:0.8rem;
@@ -581,9 +594,25 @@ canvas{
 }
 .poster .bg,.poster .layer,.poster .html2canvas,.poster .final{
   position:absolute;
-  top:0;left:0;
+  /*top:0;left:0;
   width:100%;
-  height:12.06rem;
+  height:12.06rem;*/
+  width: 6.63rem;
+  height: 8.07rem;
+}
+.poster .bg{
+  height:auto !important;
+}
+.poster .html2canvas{
+  left: .46rem;
+  top: 0.72rem;
+  overflow:hidden;
+}
+.poster .final{
+  width: 6.63rem;
+  height: 8.07rem;
+  left: .46rem;
+  top: 0.72rem;
 }
 .poster .bg{
   z-index:1;
@@ -594,43 +623,109 @@ canvas{
 iframe{
   width: 8.2rem;height:1.8rem;
   left: -0.35rem;
-  position: absolute;
+  position: relative;
   z-index: 2;
   bottom: 0;
 }
 .poster .btn_group{
   position:absolute;
   z-index:3;
-  bottom:2.8rem;
+  bottom:3.8rem;
   width:100%;
 }
 .poster .btn_group .btn{
   width:2.88rem;
-  height:0.93rem;
+  /*height:0.93rem;*/
   float:left;
-  background:url(../img/layer_btn.png) center no-repeat;
-  background-size:2.88rem auto;
-  line-height:0.92rem;
+  /*background:url(../img/layer_btn.png) center no-repeat;*/
+  /*background-size:2.88rem auto;*/
+  /*line-height:0.92rem;*/
+  text-decoration: underline;
   font-size:0.3rem;text-align:center;
   color:#fff;
 }
 .poster .btn_group .submit{
   background:url(../img/layer/btn.png) center no-repeat;
-  background-size:5.16rem 0.96rem;
+  background-size:5.05rem 0.94rem;
   width:100%;
   height:1rem;
   position: absolute;
-  margin-top: 1.2rem;
+  margin-top: .8rem;
+}
+.poster .btn_group .poster_share{
+  background:url(../img/layer/share.png) center no-repeat;
+  background-size:5.05rem 0.94rem;
+  width:100%;
+  height:1rem;
+  position: absolute;
+  margin-top:2rem;
+}
+.poster .btn_group_next{
+  display:none;
+  position: absolute;
+  top: 9rem;
+  width: 100%;
+  height: 3rem;
+}
+.poster .btn_group_next .hint{
+  text-decoration: underline;
+  font-size:0.3rem;
+  color:#fff;
+  width:100%;
+  text-align:center;
+  margin-top:0.1rem;
 }
 .share_mask{
   position:absolute;
   top:0;left:0;
   width:100%;height:100%;
   background-color:rgba(0,0,0,.7);
-  z-index:2;
+  z-index:5;
 }
 .share_mask img{
   width:2.98rem;
   position:absolute;
   top:0.5rem;right:1rem;
+}
+.music_play{
+  position: absolute;
+  right: 0.2rem;
+  top: 0.2rem;
+  width: 0.7rem;
+  height: 0.7rem;
+  overflow: hidden;
+  display:none;
+  z-index: 99;
+}
+.music_play.xz{
+  -moz-backface-visibility: visible;
+  -moz-transform-origin: center center;
+  -moz-animation: musicanimate 2s 0s infinite linear normal backwards;
+  -webkit-backface-visibility: visible;
+  -webkit-transform-origin: center center;
+  -webkit-animation: musicanimate 2s 0s infinite linear normal backwards;
+}
+.music_play img{
+  width:100%;
+  position: absolute;
+}
+@-webkit-keyframes musicanimate {
+  0% {
+    -webkit-transform: rotate(0deg) rotate(180 \] ] deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@-moz-keyframes musicanimate {
+  0% {
+    -moz-transform: rotate(0deg) rotate(180 \] ] deg);
+  }
+  100% {
+    -moz-transform: rotate(360deg);
+  }
+}
+.poster{
+  background:url('../img/p1_bg.jpg') center no-repeat;
+  background-size:100%;
 }
