--- a/css/darre.css
+++ b/css/darre.css
@@ -335,12 +335,15 @@
 /*点赞页面 从下往上*/
 .bg{
   position:absolute;
-  top:0;left:0;
-  width:100%;
+  left: .46rem;
+  top: 0.4rem;
+  width: 6.63rem;
+  height: 8.07rem;
   z-index:0;
 }
 #praiseContainer{
-  background:#000;
+  background:url(../img/p1_bg.jpg) top no-repeat;
+  background-size:100%;
   width:100%;
   height:100%;
   position: absolute;
@@ -446,4 +449,16 @@
   position: absolute;
   top: 74%;
   left: 9%;
+}
+.link{
+  width:100%;
+  color:#fff;
+  text-align:center;
+  text-decoration:underline;
+  font-size:0.3rem;
+  position:absolute;
+}
+.iframe{
+  position: absolute;
+  top: 8.36rem;
 }
