--- a/css/base.css
+++ b/css/base.css
@@ -36,14 +36,13 @@ html, body {
 .load span{
   display: none;
   width: 100%;
+  height: 100%;
   position: absolute;
-  top: 36%;
-  /*text-decoration: underline;*/
   color: #eee;
   font-size: 0.36rem;
   text-align: center;
-  color:#eee;
-
+  color: #eee;
+  line-height: 10rem;
 }
 .content, .part {
   width: 100%;
@@ -316,7 +315,7 @@ html, body {
 .item .note {
   position: absolute;
   width: 0.5rem;
-  height: 1.11rem;
+  height: 1.2rem;
   background-size: 100%;
   background-repeat: no-repeat;
 }
@@ -391,7 +390,14 @@ html, body {
   background-size: cover;
   text-align: center;
 }
-
+.part_3 .back{
+  position: absolute;
+  color: #fff;
+  font-size: 0.3rem;
+  top: 0.5rem;
+  left: 0.5rem;
+  text-decoration: underline;
+}
 .part_3 .theme_p {
   position: absolute;
   width: 100%;
@@ -612,7 +618,7 @@ canvas{
   width: 6.63rem;
   height: 8.07rem;
   left: .46rem;
-  top: 0.72rem;
+  top: 0.4rem;
 }
 .poster .bg{
   z-index:1;
@@ -630,7 +636,7 @@ iframe{
 .poster .btn_group{
   position:absolute;
   z-index:3;
-  bottom:3.8rem;
+  top:8.8rem;
   width:100%;
 }
 .poster .btn_group .btn{
@@ -663,7 +669,7 @@ iframe{
 .poster .btn_group_next{
   display:none;
   position: absolute;
-  top: 9rem;
+  top:8.4rem;
   width: 100%;
   height: 3rem;
 }
