--- a/css/darre.css
+++ b/css/darre.css
@@ -342,13 +342,14 @@ html, body {
 }
 
 /*点赞页面 从下往上*/
-.bg{
+#praiseContainer .bg{
   position:absolute;
-  left: .46rem;
-  top: 0.4rem;
-  width: 6.63rem;
-  height: 8.07rem;
-  z-index:0;
+  left:0rem;
+  top: 0rem;
+  width: 7.5rem;
+  height: 7.5rem;
+  z-index:2;
+  border:none;
 }
 #praiseContainer{
   background:url(../img/p1_bg.jpg) top no-repeat;
@@ -440,6 +441,7 @@ html, body {
   text-align: center;
   top: 0.3rem;
   right: 0.42rem;
+  z-index:5;
 }
 #praiseContainer .praise img{
   width: 0.56rem;
@@ -451,13 +453,12 @@ html, body {
   padding-top: 0.18rem;
 }
 .go_rank{
-  width: 6.21rem;
+  width: 100%;
   height: 1.15rem;
   background: url(../img/rank_btn.png) center no-repeat;
-  background-size: 100%;
+  background-size: 5.16rem 0.96rem;
   position: absolute;
   top: 74%;
-  left: 9%;
 }
 .link{
   width:100%;
@@ -469,5 +470,5 @@ html, body {
 }
 .iframe{
   position: absolute;
-  top: 8.36rem;
+  top: 7.06rem;
 }
